.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Added a simple ``advanced`` mode to the add site form. If advanced is passed
  as a query argument to the ``@@plone-addsite`` more options are available.
  The button in the ZMI uses the advanced mode by default. Currently the choice
  of omitting the default content and deselecting any of the default extension
  profiles are limited to the advanced mode.
  [hannosch]

- Expose the site language in the add site form and refactor the language
  guessing based on the browser language into that view. The addPloneSite
  function takes an explicit argument for the language now.
  [hannosch]

- Hardcode utf-8 for UnicodeSplitter, since Hanno says that's all we
  can accept and there's no way to use getSiteEncoding from the splitter.
  [alecm]

- Added option to skip the creation of the default example content in the new
  add site form. Grouped the add-ons selection via a fieldset.
  [hannosch]

- Refactored the old factory dispatcher / addPloneSiteForm to use a modern
  browser page instead.
  [hannosch]

- Removed the special default page and translation handling. LinguaPlone uses
  a content language negotiator per default instead.
  [hannosch]

- Replaced highlightsearchterms.js with the Plone trunk
  jquery.highlightsearchterms.js plugin. This removes the need to add
  searchterm= query parameters to search.pt results.
  Refs. http://dev.plone.org/plone/ticket/8770
  [mj]

- Add a link to log out from the logged_out template if logged in as a Zope
  user via basic HTTP Authentication and the standard logout failed.
  [davisagli]

- Removed the cut/copy/paste icons from the action menu in new sites, as they
  just add noise + more HTTP requests.
  [limi]

- Moved happytalk in site_feedback_template.pt and author_feedback_template.pt