@@ -45,7 +45,7 @@
                 The site configuration is outdated and needs to be
                 upgraded. Please
                 <a href="#"
-                   tal:attributes="href string:${mt/absolute_url}/manage_migrate"
+                   tal:attributes="href string:${context/portal_url}/@@plone-upgrade"
                    title="Go to the upgrade page"
                    i18n:attributes="title;"
                    i18n:name="link_continue_with_the_upgrade"
