@@ -1,10 +1,0 @@
-<dtml-var manage_page_header>
-<dtml-var manage_tabs>
-
-<h3>Result of the attempt...</h3>
-
-<pre><dtml-var name="out"></pre>
-
-<p><a href="manage_overview">Return</a></p>
-
-<dtml-var manage_page_footer>
