@@ -1,63 +1,0 @@
-<dtml-var manage_page_header>
-<dtml-var manage_tabs>
-
-<h3>Upgrade this Plone site</h3>
-
-<p>
-<b>Current active configuration:</b> <code>&dtml-getInstanceVersion;</code> <br />
-<b>Latest available configuration:</b> <code>&dtml-getFileSystemVersion;</code> <br />
-</p>
-
-<hr />
-
-<p>
-<dtml-if needUpgrading>
-<img src="error_icon.png" />
-<strong>Your Plone site is <em>not</em> up to date with the latest version.</strong>
-Click "upgrade" to bring your Plone site configuration in sync with what's on
-your file system.</p>
-
-<p>More information about the upgrade procedure can be found in the
-documentation section of plone.org in the
-<a href="http://plone.org/upgrade">
-  Upgrade Guide
-</a>.
-
-<hr />
-
-<h4>Note:</h4>
-<p><span style="background-color:red; color: white; font-weight: bold">Please
-ensure you have a backup of your Plone site before performing the upgrade.</span>
-Also make sure you are not doing this upgrade as an Emergency user.
-Upgrading sometimes performs a catalog/security update, which may take a long
-time on large sites. Be patient.</p>
-
-<form action="upgrade" method="POST">
-
-<p>
-<input name="dry_run" type="checkbox" value="1:int" />
-Dry run mode &mdash; run the migration and show the result without actually
-writing anything to the database.
-</p>
-
-<input type="submit" value="Upgrade"/>
-
-</form>
-
-<dtml-else>
-
-<img src="confirm_icon.png" />
-<strong>Your Plone site is up to date.</strong>
-</dtml-if>
-</p>
-<hr />
-
-<h3>Current version information</h3>
-
-<ul>
-<dtml-in coreVersionsList prefix="setup">
-    <li>&dtml-setup_key;: &dtml-setup_item;</li>
-</dtml-in>
-</ul>
-
-<dtml-var manage_page_footer>
